force-app/main/default/objects/Customer_Requirements__c/Customer_Requirements__c.object-meta.xml
<CustomObject>
    <label>Customer Requirements</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Customer Requirements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>