force-app/main/default/objects/Customer_Requirements__c/fields/Additional_Copies_of_Documents__c.field-meta.xml
<CustomField>
    <fullName>Additional_Copies_of_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Copies of Documents</label>
    <type>Checkbox</type>
</CustomField>