force-app/main/default/objects/Customer_Requirements__c/fields/Cancellation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Schedule__c</fullName>
    <label>Cancellation Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>