force-app/main/default/objects/Customer_Requirements__c/fields/Certificate_of_Conformance__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Conformance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Conformance</label>
    <type>Checkbox</type>
</CustomField>