force-app/main/default/objects/Customer_Requirements__c/fields/Certificate_of_Origin_No_Legalization__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Origin_No_Legalization__c</fullName>
    <label>Certificate of Origin - No Legalization</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>