force-app/main/default/objects/Customer_Requirements__c/fields/COO_w_Chamber_of_Commerce_Legalization__c.field-meta.xml
<CustomField>
    <fullName>COO_w_Chamber_of_Commerce_Legalization__c</fullName>
    <label>COO w/ Chamber of Commerce Legalization</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>