force-app/main/default/objects/Customer_Requirements__c/fields/Customer_Specific_T_C__c.field-meta.xml
<CustomField>
    <fullName>Customer_Specific_T_C__c</fullName>
    <label>Customer Specific T&amp;C</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>