force-app/main/default/objects/Customer_Requirements__c/fields/Export_Packing_List__c.field-meta.xml
<CustomField>
    <fullName>Export_Packing_List__c</fullName>
    <label>Export Packing List</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>