force-app/main/default/objects/Customer_Requirements__c/fields/Functional_Test_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Functional_Test_Procedure__c</fullName>
    <label>Functional Test Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>