force-app/main/default/objects/Customer_Requirements__c/fields/Heat_Chart_for_Traceability__c.field-meta.xml
<CustomField>
    <fullName>Heat_Chart_for_Traceability__c</fullName>
    <label>Heat Chart for Traceability</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>