force-app/main/default/objects/Customer_Requirements__c/fields/Inspection_Release_Note_Required__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Release_Note_Required__c</fullName>
    <label>Inspection Release Note Required</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>