force-app/main/default/objects/Customer_Requirements__c/fields/Inspection_Test_Plan_ITP_Standard__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Test_Plan_ITP_Standard__c</fullName>
    <label>Inspection Test Plan (ITP) - Standard</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>