force-app/main/default/objects/Customer_Requirements__c/fields/Letter_of_Credit__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Credit__c</fullName>
    <label>Letter of Credit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>