force-app/main/default/objects/Customer_Requirements__c/fields/Manufacturer_Data_Book_MDB__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Data_Book_MDB__c</fullName>
    <label>Manufacturer Data Book (MDB)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>