force-app/main/default/objects/Customer_Requirements__c/fields/NDT_Certs__c.field-meta.xml
<CustomField>
    <fullName>NDT_Certs__c</fullName>
    <label>NDT Certs</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>