force-app/main/default/objects/Customer_Requirements__c/fields/Number_of_Additional_Copies__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Additional_Copies__c</fullName>
    <label>Number of Additional Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>