force-app/main/default/objects/Customer_Requirements__c/fields/Packaging_Material_Requirements_ISPM15__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Material_Requirements_ISPM15__c</fullName>
    <label>Packaging Material Requirements (ISPM15)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>