force-app/main/default/objects/Customer_Requirements__c/fields/Paint_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Paint_Procedure__c</fullName>
    <label>Paint Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>