force-app/main/default/objects/Customer_Requirements__c/fields/Proof_Pressure_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Proof_Pressure_Procedure__c</fullName>
    <label>Proof Pressure Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>