force-app/main/default/objects/Customer_Requirements__c/fields/Sizing_Calculations__c.field-meta.xml
<CustomField>
    <fullName>Sizing_Calculations__c</fullName>
    <label>Sizing Calculations</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>