force-app/main/default/objects/Customer_Requirements__c/fields/TPI_Notes__c.field-meta.xml
<CustomField>
    <fullName>TPI_Notes__c</fullName>
    <label>TPI Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>