force-app/main/default/objects/Customer_Requirements__c/fields/TPI_Notification_Period__c.field-meta.xml
<CustomField>
    <fullName>TPI_Notification_Period__c</fullName>
    <label>TPI Notification Period</label>
    <type>DateTime</type>
</CustomField>