force-app/main/default/objects/Customer_Requirements__c/fields/Vendor_Profile_Catalogue_of_Product__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Profile_Catalogue_of_Product__c</fullName>
    <label>Vendor Profile/Catalogue of Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>