force-app/main/default/objects/Customer_Requirements__c/fields/Vendor_s_Pickling_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Vendor_s_Pickling_Procedure__c</fullName>
    <label>Vendor&apos;s Pickling Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>