force-app/main/default/objects/Customer_Requirements__c/fields/Warranty_Bond__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Bond__c</fullName>
    <label>Warranty Bond</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>