force-app/main/default/objects/Customer_Requirements__c/fields/Weld_Repair_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Weld_Repair_Procedure__c</fullName>
    <label>Weld Repair Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>